--- a/src/templates/articles.hbs
+++ b/src/templates/articles.hbs
@@ -1,7 +1,9 @@
-{{#each this}}
-<li class="article-item">
-    <article class="article">
-        <p class="country-title__small">{{name}}</p>
-    </article>
-</li>
-{{/each}}
+<ul class="list-countries">
+    {{#each this}}
+    <li class="article-item">
+        <article class="article">
+            <p class="country-title__small">{{name}}</p>
+        </article>
+    </li>
+    {{/each}}
+</ul>
