--- a/src/styles.css
+++ b/src/styles.css
@@ -59,7 +59,16 @@ h2 {
 .input_search {
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 10px;
   padding-left: 10px;
+  border: 2px solid #556666;
+  outline: none;
+}
+.input_search:hover,
+.input_search:focus {
+  border: 3px solid #6a9191;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
 }
 .coutry-desc {
   margin-right: 50px;
@@ -104,4 +113,7 @@ h2 {
 }
 .country-title__small {
   margin: 0;
+}
+.is-hidden {
+  display: none;
 }
