--- a/src/templates/articles.hbs
+++ b/src/templates/articles.hbs
@@ -1,7 +1,7 @@
 <ul class="list-countries">
     {{#each this}}
     <li class="article-item">
-        <p class="country-title__small">{{name}}</p>
+        <a src='' class="country-title__small {{alpha3Code}}">{{name}}</a>
     </li>
     {{/each}}
 </ul>
